force-app/main/default/objects/PEO_Compliance_Info__c/PEO_Compliance_Info__c.object-meta.xml
<CustomObject>
    <description>This Object stores all information related to compliance fields</description>
    <label>PEO Compliance Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PEO Compliance Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PEO Compliance Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>