force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionAName6__c.field-meta.xml
<CustomField>
    <fullName>SectionAName6__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SectionA Name6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>