force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionAPercentage9__c.field-meta.xml
<CustomField>
    <fullName>SectionAPercentage9__c</fullName>
    <label>SectionA Percentage9</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>