force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionBPercentage5__c.field-meta.xml
<CustomField>
    <fullName>SectionBPercentage5__c</fullName>
    <label>SectionB Percentage5</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>