force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionCName7__c.field-meta.xml
<CustomField>
    <fullName>SectionCName7__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SectionC Name7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>