force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionCPercentage3__c.field-meta.xml
<CustomField>
    <fullName>SectionCPercentage3__c</fullName>
    <label>SectionC Percentage3</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>