force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionEName6__c.field-meta.xml
<CustomField>
    <fullName>SectionEName6__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SectionE Name6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>