force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionFName4__c.field-meta.xml
<CustomField>
    <fullName>SectionFName4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SectionF Name4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>