force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionGName3__c.field-meta.xml
<CustomField>
    <fullName>SectionGName3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SectionG Name3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>