force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionGName7__c.field-meta.xml
<CustomField>
    <fullName>SectionGName7__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SectionG Name7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>