force-app/main/default/objects/PEO_Compliance_Info__c/fields/SectionHPercentage3__c.field-meta.xml
<CustomField>
    <fullName>SectionHPercentage3__c</fullName>
    <label>SectionH Percentage3</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>